<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_red_bottom_border">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ville_depart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawableStart="@drawable/gps_start24px"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/searchcarpool_startcity_hint"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/dashed_line_30px"
            android:rotation="-45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ville_depart" />

        <TextView
            android:id="@+id/ville_d_arrivee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/gps_end24px"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/searchcarpool_endcity_hint"
            android:textColor="@color/nyctaxi"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ville_depart"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/calendar_18px"
            android:text="@string/date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heure_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/alarm_clock_18px"
            android:text="@string/time"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/date_case"
            app:layout_constraintTop_toBottomOf="@+id/date_case" />

        <TextView
            android:id="@+id/place_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/driver_18px"
            android:text="@string/Place"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/heure_case"
            app:layout_constraintTop_toBottomOf="@+id/heure_case" />

        <TextView
            android:id="@+id/price_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/tags_18px"
            android:text="@string/price"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/place_case"
            app:layout_constraintTop_toBottomOf="@+id/place_case" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>