<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/whitegrey"
    tools:context=".FiltersPickerActivity">

    <ImageView
        android:id="@+id/close_filter_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button"
        android:paddingLeft="10dp"
        android:rotation="90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <Button
        android:id="@+id/citypicker_confirme_btn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_for_city_picker_confirm_btn"
        android:fontFamily="sans-serif-light"
        android:maxHeight="50dp"
        android:text="@string/filterpicker_confirmbtn"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citypicker_recycleview2" />

    <EditText
        android:id="@+id/citypicker_cityname2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_glassmorphism_radius"
        android:drawableStart="@drawable/city"
        android:hint="@string/citypicker_edittext_hint"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/biscay"
        android:textColorHint="@color/biscay"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filters_subtitle2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/citypicker_recycleview2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citypicker_cityname2" />

    <TextView
        android:id="@+id/filters_subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/filter_picker_subtitle2"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/filters_subtitle1"
        app:layout_constraintTop_toBottomOf="@+id/categorie_tags_recycleview" />

    <TextView
        android:id="@+id/filters_subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/filter_picker_subtitle1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/filters_title"
        app:layout_constraintTop_toBottomOf="@+id/filters_title" />

    <TextView
        android:id="@+id/filters_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/filter_picker_title"
        android:textColor="@color/blackpearl"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categorie_tags_recycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filters_subtitle1" />
</androidx.constraintlayout.widget.ConstraintLayout>